--- a/style.css
+++ b/style.css
@@ -2,4 +2,169 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto,'Helvetica Neue', sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.top-container {
+    background-color: #1F2937;
+    color: white;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px;
+    margin: 0 200px;
+
+}
+
+.header-logo{
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 24px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.hero-container {
+    margin: 0 200px;
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+}
+
+.hero-text-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 48px;
+    gap: 48px;
+}
+
+.hero-text {
+    font-size: 48px;
+}
+
+.hero-sec-text {
+    font-size: 18px;
+    font-weight: 900;
+    color: #F9FAF8;
+    width: 350px;
+}
+
+.hero-button {
+    width: 200px;
+    padding: 8px 16px;
+    background-color: #3882F6;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+}
+
+.info-title {
+    text-align: center;
+    font-size: 24px;
+    padding: 48px;
+}
+
+.info-cards {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+
+.info-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-card img {
+    width: 150px;
+    height: 150px;
+    border: 2px solid #3882F6;
+    border-radius: 10px;
+    margin-bottom: 24px;
+}
+
+.info-text {
+    width: 150px;
+    text-align: center;
+}
+
+.quote-container {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 200px;
+    text-align: left;
+    position: relative;
+}
+
+.quote {
+    font-style: italic;
+    font-size: 36px;
+    max-width: 800px;
+    color: #1F2937;
+}
+
+.author {
+    text-align: right;
+    width: 100%;
+    max-width: 800px;
+    margin-top: 16px;
+}
+
+.sign-up-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    margin: 120px 200px;
+    padding: 40px;
+    gap: 24px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+
+}
+
+.sign-up-text {
+    color: white;
+}
+
+.sign-up-button button {
+    color: white;
+    background-color: #3882F6;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid white;
+    outline: none;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: white;
+    padding: 24px;
+    text-align: center;
 }
